helm/XcaDocumentSource/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xcadocumentsource
  namespace: xcads-int-nhn
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app: xcadocumentsource
