helm/XcaDocumentSource/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: xcads-int-nhn-ingress
  namespace: xcads-int-nhn
spec:
  ingressClassName: avi-ingress-class-helsenett
  tls:
    - hosts:
        - xds.pjd.test.nhn.no
  rules:
    - host: xds.pjd.test.nhn.no
      http:
        paths:
          - backend:
              service:
                name: xcads-int-nhn
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
